# simple-rust-2

./: README.md
aggregator/: Cargo.toml
aggregator/src/: main.rs  serializers.rs  singnature.rs
client/: Cargo.toml
client/src/: main.rs  serializers.rs  singnature.rs
