[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.117"
tokio = { version = "1", features = ["full"] }
url = "2.5.0"
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
futures-util = "0.3.30"
ring = "0.17.8"
serde = { version = "1.0.203", features = ["derive"] }
build = "0.0.2"
